Fix issues with width/height when creatign image from clipboard

BUG:315778

Patch by Sahil Nagpal